[package]
name = "nop-json"
version = "1.0.2"
authors = ["Jeremiah Shaulov <jeremiah.shaulov@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "JSON serialization/deserialization (full-featured, modern, optimal, streaming, direct into struct, binary-ready)"
repository = "https://github.com/jeremiah-shaulov/nop-json"
keywords = ["json"]

[dependencies]
numtoa = "0.2"
nop-json-derive = "1.1"
