[package]
name = "nop-json"
version = "2.1.0"
authors = ["Jeremiah Shaulov <jeremiah.shaulov@gmail.com>"]
edition = "2024"
license = "MIT"
readme = "README.md"
description = "JSON serialization/deserialization (full-featured, modern, optimal, streaming, direct into struct, binary-ready)"
repository = "https://github.com/jeremiah-shaulov/nop-json"
keywords = ["json"]

[dependencies]
numtoa = "1.0"
nop-json-derive = "2.1"

[dev-dependencies]
read_iter = "0.1"

[patch.crates-io]
nop-json-derive = { path = "../nop-json-derive" }
